<resources>
    <string name="app_name">Food</string>
    <string name="show">show</string>
    <string name="TODO_picture">这是一张图片</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="calorie">"卡路里  "</string>
    <string name="Kilocalorie">千卡</string>
    <string name="fat">"脂肪  "</string>
    <string name="gram">克</string>
    <string name="sugar">"糖  "</string>
    <string name="protein">"蛋白质  "</string>
    <string name="ChangeBatch">换一批</string>
    <string name="CopyToRecord">复制到饮食记录</string>
    <string name="major_materials">主要材料</string>
    <string name="steps">详细步骤</string>
    <string name="scale">单位：每100克</string>
    <string name="nutritional_components">营养成分</string>
    <string name="materials_and_practices">原料与做法</string>
    <string name="ke">克</string>
    <string name="occupation">职业</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="confirm">确定</string>
    <string name="menu_name">菜谱名称</string>
    <string name="quality">预估食用量（克）</string>
    <string name="recipe_list">食谱清单</string>
    <string name="daka">大卡</string>
    <string name="carbohydrate">"碳水化合物  "</string>
    <string name="submit">提交</string>
    <string name="nickname">昵称</string>
    <string name="profile">头像</string>
    <string name="account">帐号资料</string>
    <string name="ID">ID</string>
    <string name="ill">病史</string>
    <string name="element">本周已摄入营养信息</string>
    <string name="cellulose">纤维素</string>
    <string name="vitaminA">维生素A</string>
    <string name="vitaminB1">维生素B1</string>
    <string name="vitaminB2">维生素B2</string>
    <string name="vitaminB6">维生素B6</string>
    <string name="vitaminC">维生素C</string>
    <string name="vitaminE">维生素E</string>
    <string name="microgram">微克</string>
    <string name="haoke">毫克</string>
    <string name="carotene">胡萝卜素</string>
    <string name="cholesterol">胆固醇</string>
    <string name="Ca">钙</string>
    <string name="Na">钠</string>
    <string name="title">小知识</string>
    <string name="check_add_menu">是否添加到饮食记录</string>
    <string name="search_history">搜索历史</string>
    <string name="search">搜索</string>
    <string name="food_identification">食材识别</string>
    <string name="recipe_recognition">菜谱识别</string>
    <string name="common_performance">常见表现</string>
    <string name="characteristic">特点</string>
    <string name="psychological_feature">心理特征</string>
    <string name="note">注意事项</string>
    <string name="defaults">默认</string>
    <string name="please">请完善信息</string>
    <string name="pig">M1080.3,453.7c-77.2,88.2 -214.6,234.4 -214.6,234.4s22,160.2 35.3,269.7c5.9,55.9 -37.5,80.1 -86,58.1 -92.6,-43.4 -233.7,-111 -265.3,-126.4 -32.3,14.7 -174.2,81.6 -267.5,124.9 -49.2,21.3 -92.6,-2.2 -87.5,-58.1 12.5,-109.5 35.3,-269 35.3,-269S91.1,541.9 13.2,453.7c-27.9,-32.3 -9.6,-77.9 44.8,-86 111.7,-19.8 284.4,-51.4 284.4,-51.4s94.8,-163.1 154.3,-263.1C529.8,-7.8 552.6,-0.4 556.3,1c10.3,2.9 26.5,15.4 47,52.2 58.8,99.9 152.1,263.1 152.1,263.1s170.5,31.6 280.7,51.4c53.6,8.1 71.3,54.4 44.1,86z</string>
    <string name="self_information">当前值</string>
    <string name="average_information">全国均值</string>
    <string name="standrad_information">标准值</string>
    <string name="tianxie">点击我填写信息</string>
    <string name="tizhi">体质</string>
    <string name="bmi">BMI值</string>
    <string name="xiugai">修改信息</string>
    <string name="show_element">查看已摄入的营养元素量</string>
</resources>
