<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/occupation_image_view"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_occupation"
            android:contentDescription="@string/TODO_picture" />

        <TextView
            android:id="@+id/occupation_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occupation"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/add_age_image_view"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_age"
            android:contentDescription="@string/TODO_picture" />

        <TextView
            android:layout_width="55dp"
            android:layout_height="2dp" />

        <ImageView
            android:id="@+id/add_sex_image_view"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_sex"
            android:contentDescription="@string/TODO_picture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_age_text_view"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/age"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/add_sex_text_view"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sex"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="2dp"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/add_height_image_view"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_height"
            android:contentDescription="@string/TODO_picture" />

        <TextView
            android:layout_width="55dp"
            android:layout_height="2dp" />

        <ImageView
            android:id="@+id/add_weight_image_view"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_weight"
            android:contentDescription="@string/TODO_picture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_height_text_view"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/height"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/add_weight_text_view"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/weight"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/add_ok_button"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/confirm" />

</LinearLayout>